k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
  labels:
    app: django-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
      - name: django-container
        image: samhitha8/django-app:v20
        command: ["gunicorn", "--timeout", "120", "--workers", "3", "--bind", "0.0.0.0:8000", "smart_retail_store.wsgi:application"]
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: gcp-credentials
          mountPath: /app/credentials
          readOnly: true
        readinessProbe:
          httpGet:
            path: /admin
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
      volumes:
      - name: gcp-credentials
        secret:
          secretName: gcp-credentials
